Fix bullet unicode on iOS

--- a/themes/orgsync/css/event-dates.styl
+++ b/themes/orgsync/css/event-dates.styl
@@ -24,7 +24,7 @@
       display inline
       color #666
     .long-time:after
-      content ' •'
+      content ' \2022'
     .info
       padding 5px 0 5px 10px
       overflow auto
